# Chin-TelegramAssistant

./: Dockerfile  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: data.py  responses.py  routers.py  settings.py
filters/: message.py  prompts.py
handlers/: start.py
handlers/admin/: auto_m.py
handlers/commands/: story.py
handlers/users/: message.py
methods/: poststory.py
states/: admin.py
utils/: choicer.py  connector.py  formatter.py  webhook.py  writer.py
