[project]
name = "aichatbot"
version = "0.1.0"
description = "Telegram asistant bot"
authors = [
    {name = "Javohir",email = "qobiljonsharipov33@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "cloudflare (>=4.3.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
